--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ layout: default
 	<!--<img src="/figures/pedro_4.jpg" class = "responsive" alt="Pedro" width="700.0297" height="249.7774"> -->
 	<img src="/figures/Ursula_Tooley_Honeys.jpg" class = "responsive" align="left" width="150" alt="Ursula">
 
-	<p>   I am currently a postdoc at 	<a href="https://www.mir.wustl.edu/" class="ext" target="_blank"><b>Washington University in St. Louis</b></a>, working under the direction of
-		<a href="https://wunderlab.wustl.edu/" class="ext" target="_blank"><b>Dr. Cynthia Rogers and Dr. Chris Smyser</b></a>. My research examines the
+	<p>   I am currently a postdoc at 	<a href="https://www.mir.wustl.edu/" class="ext" target="_blank"><b>Washington University in St. Louis</b></a>. My research examines the
 	 functional brain network development in neonates and toddlers, with a focus on the pace of brain maturation and how neuroplasticity changes across development.
 		I am also interested in effects of the early environment on brain development. </p>
 
