added cassidy pub

--- a/publications/index.html
+++ b/publications/index.html
@@ -6,6 +6,8 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
+	<p>McDermott, C.L., Lee, J., Park, A.T., <strong> Tooley, U.A.</strong>, Boroshok, A. L., Hilton, K., Linn, K.A., Mupparapu, M., Mackey, A.P. (2023). Developmental correlates of accelerated molar eruption in early childhood. <em> Biological Psychiatry: Global Open Science</em>. <a href="McDermott et al. - 2023 - Developmental correlates of accelerated molar erup.pdf" class="paper" target="_blank">pdf</a> </p>
+
 	<p><strong> Tooley, U.A.</strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. (2022). The age of reason: Functional brain network development during childhood. <em> The Journal of Neuroscience.</em> 42(44):8237–8251. <a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">pdf</a> </p>
 
 	<p>Park, A. T., Richardson, H., <strong>Tooley, U.A.</strong>, McDermott, C.L., Boroshok, A. L., Ke, A., Leonard, J. A., Tisdall, M.D., Deater-Deckard, K., Edgar, J.C., & Mackey, A.P. (2022). Early stressful experiences are associated with reduced neural responses to naturalistic emotional and social content in children. <em>Developmental Cognitive Neuroscience</em>. 57:101152. <a href="Park et al. - 2022 - Early stressful experiences are associated.pdf" class="paper" target="_blank">pdf</a> </p>
