updated with austin paper, update cv

--- a/publications/index.html
+++ b/publications/index.html
@@ -6,6 +6,8 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
+	<p>Boroshok, A. L., McDermott, C.L., Fotiadis, P., Park A.T.,<strong> Tooley, U.A.</strong>, Gatavins, M.M., Tisdall M.D., Bassett, D.S., & Mackey, A.P. (2023). Individual differences in T1w/T2w ratio development during childhood. <em> Developmental Cognitive Neuroscience.</em>. <a href="Boroshok et al. - 2023 - Individual differences in T1wT2w ratio developmen.pdf" class="paper" target="_blank">pdf</a> </p>
+
 	<p>McDermott, C.L., Lee, J., Park, A.T., <strong> Tooley, U.A.</strong>, Boroshok, A. L., Hilton, K., Linn, K.A., Mupparapu, M., Mackey, A.P. (2023). Developmental correlates of accelerated molar eruption in early childhood. <em> Biological Psychiatry: Global Open Science</em>. <a href="McDermott et al. - 2023 - Developmental correlates of accelerated molar erup.pdf" class="paper" target="_blank">pdf</a> </p>
 
 	<p><strong> Tooley, U.A.</strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. (2022). The age of reason: Functional brain network development during childhood. <em> The Journal of Neuroscience.</em> 42(44):8237–8251. <a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">pdf</a> </p>
@@ -35,8 +37,9 @@ Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood S
 
 	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015). Sleep disturbance and expressive language development in preschool-age children. <em> Child Development</em>, 86(6), 1984-1998. <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p><strong>Submitted or under review</strong></p>
+	<p><strong>Submitted or in prep</strong></p>
 
+	<p><strong>Tooley, U.A.</strong>, Latham, A., Kenley, J.K., Alexopoulos, D., Smyser, T., Warner, B.B., Shimony, J.S., Neil, J.J., Luby, J.L., Barch, D.M., Rogers, C.E., & Smyser, C.D. Effects of the early environment on the pace of brain network development: Evidence from the first three years of life. <em>In prep.</em></p>
 
 	<p> <font size="+2"> Selected publications</font></p>
 	<p><a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">The age of reason: Functional brain network development during childhood. </a> <em> The Journal of Neuroscience </em> (2022).
