--- a/publications/index.html
+++ b/publications/index.html
@@ -6,7 +6,7 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
-	<p>Boroshok, A. L., McDermott, C.L., Fotiadis, P., Park A.T.,<strong> Tooley, U.A.</strong>, Gatavins, M.M., Tisdall M.D., Bassett, D.S., & Mackey, A.P. (2023). Individual differences in T1w/T2w ratio development during childhood. <em> Developmental Cognitive Neuroscience.</em>. <a href="Boroshok et al. - 2023 - Individual differences in T1wT2w ratio developmen.pdf" class="paper" target="_blank">pdf</a> </p>
+	<p>Boroshok, A. L., McDermott, C.L., Fotiadis, P., Park A.T.,<strong> Tooley, U.A.</strong>, Gatavins, M.M., Tisdall M.D., Bassett, D.S., & Mackey, A.P. (2023). Individual differences in T1w/T2w ratio development during childhood. <em> Developmental Cognitive Neuroscience.</em><a href="Boroshok et al. - 2023 - Individual differences in T1wT2w ratio developmen.pdf" class="paper" target="_blank">pdf</a> </p>
 
 	<p>McDermott, C.L., Lee, J., Park, A.T., <strong> Tooley, U.A.</strong>, Boroshok, A. L., Hilton, K., Linn, K.A., Mupparapu, M., Mackey, A.P. (2023). Developmental correlates of accelerated molar eruption in early childhood. <em> Biological Psychiatry: Global Open Science</em>. <a href="McDermott et al. - 2023 - Developmental correlates of accelerated molar erup.pdf" class="paper" target="_blank">pdf</a> </p>
 
