update CV, pubs, outreach

--- a/publications/index.html
+++ b/publications/index.html
@@ -39,7 +39,13 @@ Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood S
 
 	<p><strong>Submitted or in prep</strong></p>
 
-	<p><strong>Tooley, U.A.</strong>, Latham, A., Kenley, J.K., Alexopoulos, D., Smyser, T., Warner, B.B., Shimony, J.S., Neil, J.J., Luby, J.L., Barch, D.M., Rogers, C.E., & Smyser, C.D. Effects of the early environment on the pace of brain network development: Evidence from the first three years of life. <em>In prep.</em></p>
+	<p><strong>Tooley, U.A.</strong>, Latham, A., Kenley, J.K., Alexopoulos, D., Smyser, T., Warner, B.B., Shimony, J.S., Neil, J.J., Luby, J.L., Barch, D.M., Rogers, C.E., & Smyser, C.D. Effects of the early environment on the pace of brain network development: Evidence from the first three years of life. <em>Under revision.</em></p>
+
+	<p><strong>Tooley, U.A.</strong>, Kenley, J.K., Camacho, M.C., Latham, A., Alexopoulos, D., Smyser, T., Warner, B.B., Shimony, J.S., Neil, J.J., Luby, J.L., Barch, D.M., Rogers, C.E., & Smyser, C.D. The development of structure-function coupling in neonates. <em>In prep.</em></p>
+
+	<p>Simpson-Kent, I.L.*, Gataviņš, M.M.*, <strong>Tooley, U.A.</strong>, Boroshok A.L., McDermott, C.L., Park A.T., Delgado Reyes, L., Bathelt, J., & Mackey A.P.  Multilayer network associations between the exposome and childhood brain development. <em>Under review.</em></p>
+
+	<p> Leverett, S.D., Brady R.G., <strong>Tooley, U.A.</strong>, Lean, R.E., Wilson, J., Ruscitti, M., Triplett, R.L., Alexopoulos, D., Gerstein, E.G., Smyser, T.A., Warner, B.B.,  Luby, J.L., Smyser, C.D., Rogers, C.E., & Barch, D.M. Mechanisms through which prenatal social disadvantage is associated with offspring cognitive and language abilities at 2 years. <em> Under review.</em></p>
 
 	<p> <font size="+2"> Selected publications</font></p>
 	<p><a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">The age of reason: Functional brain network development during childhood. </a> <em> The Journal of Neuroscience </em> (2022).
