adding link to BiB to pubs

--- a/publications/index.html
+++ b/publications/index.html
@@ -6,6 +6,27 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
+	<p> <font size="+2"> Selected publications</font></p>
+	<p><a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">The age of reason: Functional brain network development during childhood. </a> <em> The Journal of Neuroscience </em> (2022).
+	Human childhood is characterized by dramatic changes in the mind and brain, yet little is known about the remodeling of cortical connectivity during this developmental period. Here we found that, from age 4 to age 10, age is associated with pronounced development in both visual and medial prefrontal areas of the brain, at two ends of a gradient from perceptual, externally oriented cortex to abstract, internally oriented cortex. Children with more mature patterns of brain connectivity had better cognitive skills. This research challenges the traditional notion that sensory brain areas develop first and association brain areas last, and suggests that as brain connectivity becomes more specialized, children become more able to reason about the world and their place in it.
+
+	<a href="https://www.upennglia.com/briefs/bib-brain-development" class="ext" target="_blank"><b>Little kids, big insights: What childhood can teach us about how the brain supports cognition</b></a>
+
+	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
+	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
+	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.</p>
+	<u> Press </u> <br>
+	<a href="https://www.wsj.com/articles/what-children-lose-when-their-brains-develop-too-fast-11639071752?reflink=desktopwebshare_permalink">What Children Lose When Their Brains Develop Too Fast</a>. Wall Street Journal, Dec 9, 2021, Alison Gopnik
+	<br>
+	<br>
+	<p><img src="twitter_fig_2.jpg" class="paper" align="right" width="400" alt="schematic_tooley">
+	<a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">	Associations between neighborhood SES and functional brain network development.</a> <em>Cerebral Cortex</em> (2020).
+	It is intuitively obvious to anyone who has watched a child turn into a teenager that our brains undergo vast changes as we grow up. But how might these changes differ for a child living in Brooklyn as compared to a child living in Detroit? Our recent work finds that intrinsic brain networks become more segregated, or clustered into subgroups, as children get older, and that the socioeconomic status (SES) of the neighborhood they live in affects this process. We found that youth living in high-SES neighborhoods show stronger age-related changes in brain network segregation than youth living in low-SES neighborhoods.
+	<br>
+	<br>
+	While children in high-SES neighborhoods start out with lower levels of brain network segregation, by age 22, they show higher levels of segregation than youth in low-SES neighborhoods, a pattern that is suggestive of faster brain development in the youth in high-SES neighborhoods. These effects were strongest in areas of the brain important for judgment, motivation, and both sensory and motor processing. Our findings shed light on the relationships between intrinsic brain networks and age, and on how the local environment might shape these relationships, underscoring the importance of the neighborhood during development.</p>
+    <br>
+
 	<p>Boroshok, A. L., McDermott, C.L., Fotiadis, P., Park A.T.,<strong> Tooley, U.A.</strong>, Gatavins, M.M., Tisdall M.D., Bassett, D.S., & Mackey, A.P. (2023). Individual differences in T1w/T2w ratio development during childhood. <em> Developmental Cognitive Neuroscience.</em><a href="Boroshok et al. - 2023 - Individual differences in T1wT2w ratio developmen.pdf" class="paper" target="_blank">pdf</a> </p>
 
 	<p>McDermott, C.L., Lee, J., Park, A.T., <strong> Tooley, U.A.</strong>, Boroshok, A. L., Hilton, K., Linn, K.A., Mupparapu, M., Mackey, A.P. (2023). Developmental correlates of accelerated molar eruption in early childhood. <em> Biological Psychiatry: Global Open Science</em>. <a href="McDermott et al. - 2023 - Developmental correlates of accelerated molar erup.pdf" class="paper" target="_blank">pdf</a> </p>
@@ -47,24 +68,6 @@ Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood S
 
 	<p> Leverett, S.D., Brady R.G., <strong>Tooley, U.A.</strong>, Lean, R.E., Wilson, J., Ruscitti, M., Triplett, R.L., Alexopoulos, D., Gerstein, E.G., Smyser, T.A., Warner, B.B.,  Luby, J.L., Smyser, C.D., Rogers, C.E., & Barch, D.M. Mechanisms through which prenatal social disadvantage is associated with offspring cognitive and language abilities at 2 years. <em> Under review.</em></p>
 
-	<p> <font size="+2"> Selected publications</font></p>
-	<p><a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">The age of reason: Functional brain network development during childhood. </a> <em> The Journal of Neuroscience </em> (2022).
-	Human childhood is characterized by dramatic changes in the mind and brain, yet little is known about the remodeling of cortical connectivity during this developmental period. Here we found that, from age 4 to age 10, age is associated with pronounced development in both visual and medial prefrontal areas of the brain, at two ends of a gradient from perceptual, externally oriented cortex to abstract, internally oriented cortex. Children with more mature patterns of brain connectivity had better cognitive skills. This research challenges the traditional notion that sensory brain areas develop first and association brain areas last, and suggests that as brain connectivity becomes more specialized, children become more able to reason about the world and their place in it.
-
-	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
-	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
-	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.</p>
-	<u> Press </u> <br>
-	<a href="https://www.wsj.com/articles/what-children-lose-when-their-brains-develop-too-fast-11639071752?reflink=desktopwebshare_permalink">What Children Lose When Their Brains Develop Too Fast</a>. Wall Street Journal, Dec 9, 2021, Alison Gopnik
-	<br>
-	<br>
-	<p><img src="twitter_fig_2.jpg" class="paper" align="right" width="400" alt="schematic_tooley">
-	<a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">	Associations between neighborhood SES and functional brain network development.</a> <em>Cerebral Cortex</em> (2020).
-	It is intuitively obvious to anyone who has watched a child turn into a teenager that our brains undergo vast changes as we grow up. But how might these changes differ for a child living in Brooklyn as compared to a child living in Detroit? Our recent work finds that intrinsic brain networks become more segregated, or clustered into subgroups, as children get older, and that the socioeconomic status (SES) of the neighborhood they live in affects this process. We found that youth living in high-SES neighborhoods show stronger age-related changes in brain network segregation than youth living in low-SES neighborhoods.
-	<br>
-	<br>
-	While children in high-SES neighborhoods start out with lower levels of brain network segregation, by age 22, they show higher levels of segregation than youth in low-SES neighborhoods, a pattern that is suggestive of faster brain development in the youth in high-SES neighborhoods. These effects were strongest in areas of the brain important for judgment, motivation, and both sensory and motor processing. Our findings shed light on the relationships between intrinsic brain networks and age, and on how the local environment might shape these relationships, underscoring the importance of the neighborhood during development.</p>
-    <br>
 	<p><i>PDFs are provided to ensure timely dissemination of academic work. They can be downloaded for noncommercial, information purposes only, and may not be reposted without permission from the respective copyright holders.</i></p>
 
 	</div>
