--- a/publications/index.html
+++ b/publications/index.html
@@ -10,7 +10,7 @@ layout: default
 	<p><a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">The age of reason: Functional brain network development during childhood. </a> <em> The Journal of Neuroscience </em> (2022).
 	Human childhood is characterized by dramatic changes in the mind and brain, yet little is known about the remodeling of cortical connectivity during this developmental period. Here we found that, from age 4 to age 10, age is associated with pronounced development in both visual and medial prefrontal areas of the brain, at two ends of a gradient from perceptual, externally oriented cortex to abstract, internally oriented cortex. Children with more mature patterns of brain connectivity had better cognitive skills. This research challenges the traditional notion that sensory brain areas develop first and association brain areas last, and suggests that as brain connectivity becomes more specialized, children become more able to reason about the world and their place in it. </p>
 
-	<a href="https://www.upennglia.com/briefs/bib-brain-development" class="ext" target="_blank"><b>Little kids, big insights: What childhood can teach us about how the brain supports cognition</b></a>
+	<a href="https://www.upennglia.com/briefs/bib-brain-development" class="ext" target="_blank">Little kids, big insights: What childhood can teach us about how the brain supports cognition</a>
 
 	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
 	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
@@ -25,7 +25,6 @@ layout: default
 	<br>
 	<br>
 	While children in high-SES neighborhoods start out with lower levels of brain network segregation, by age 22, they show higher levels of segregation than youth in low-SES neighborhoods, a pattern that is suggestive of faster brain development in the youth in high-SES neighborhoods. These effects were strongest in areas of the brain important for judgment, motivation, and both sensory and motor processing. Our findings shed light on the relationships between intrinsic brain networks and age, and on how the local environment might shape these relationships, underscoring the importance of the neighborhood during development.</p>
-    <br>
 
 	<p> <font size="+2"> All publications</font></p>
 	<p>Boroshok, A. L., McDermott, C.L., Fotiadis, P., Park A.T.,<strong> Tooley, U.A.</strong>, Gatavins, M.M., Tisdall M.D., Bassett, D.S., & Mackey, A.P. (2023). Individual differences in T1w/T2w ratio development during childhood. <em> Developmental Cognitive Neuroscience.</em><a href="Boroshok et al. - 2023 - Individual differences in T1wT2w ratio developmen.pdf" class="paper" target="_blank">pdf</a> </p>
