--- a/talks/index.html
+++ b/talks/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 	<div class="talks">
-		<h2>Talks</h2>
+		<h2>Recorded Talks</h2>
 		 <a href="https://www.pathlms.com/ohbm/courses/12238/sections/15845/video_presentations/137922" class="ext" target="_blank"><b>Associations between neighborhood SES and functional brain network development.</b></a>
 		 This talk was given at the Organization for Human Brain Mapping in Rome (2019).
 		 <br>
